<resources>
    <string name="app_name">Elandroid</string>

    <!-- Database values -->
        <string name="database_table_name">elandroid</string>

    <!-- Shared preferences -->
    <string name="shared_prefs_profile">user_profile</string>
    <string name="saved_active_profile_id">saved_active_profile_id</string>

    <!-- List Item nothing -->
    <string name="list_item_nothing_default">Nothing present</string>

    <!-- Navigation activity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_dashboard">Dashboard</string>
    <string name="navigation_drawer_trip_log">Trip Log</string>
    <string name="navigation_drawer_statistics">Statistics</string>
    <string name="navigation_drawer_settings">Settings</string>

    <!-- Service activity -->
    <string name="toast_cannot_profile_change">You can\'t change profiles while logging!</string>

    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_start_logging">Start logging</string>
    <string name="action_stop_logging">Stop logging</string>

    <!-- Dashboard activity -->
    <string name="action_menu_widget_add">Add display</string>
    <string name="action_create_page_positive">Create</string>
    <string name="action_create_page_negative">Cancel</string>

    <string name="dashboard_title">Dashboard</string>

    <!-- Trip Log activity -->
    <string name="trip_log_title">Trip Log</string>

    <!-- Profile activity -->
    <string name="action_add_profile">Add profile</string>
    <string name="action_save_profile">Save</string>
    <string name="action_delete_profile">Delete</string>
    <string name="action_create_profile">Create profile</string>

    <string name="profile_select_dialog_title">Select a profile</string>
    <string name="profile_select_dialog_manage">Manage</string>
    <string name="profile_select_dialog_cancel">Cancel</string>

    <string name="edit_profile_toast_updated_profile_success">Your profile has been updated</string>
    <string name="edit_profile_toast_updated_profile_fail">Your profile was unabled to be updated</string>
    <string name="edit_profile_error_profile_missing">Unable to retrieve the profile</string>
    <string name="edit_profile_error_name_missing">You need a profile name to proceed</string>

    <string name="manage_profiles_title">Manage profiles</string>
    <string name="new_profile_title">Create profile</string>
    <string name="edit_profile_title_preamble">Edit profile -</string>

    <string name="edit_profile_name_label">Profile name</string>
    <string name="edit_profile_name_placeholder"></string>
    <string name="edit_profile_make_label">Vehicle make</string>
    <string name="edit_profile_model_label">Vehicle model</string>
    <string name="edit_profile_reg_label">Number plate</string>
    <string name="edit_profile_reg_placeholder">E14 N01</string>
    <string name="edit_profile_active_checkbox_text">Active profile</string>

    <!-- Save trip dialog -->
    <string name="save_trip_dialog_title">Would you like to save the trip?</string>
    <string name="save_trip_dialog_save">Save trip</string>
    <string name="save_trip_dialog_resume">Resume</string>
    <string name="save_trip_dialog_delete">Delete</string>

    <!-- Device List -->
    <string name="device_list_discovering">Searching for nearby devices</string>
    <string name="device_list_no_devices">Could not find any devices nearby, please try again.</string>

    <!-- Service toasts -->
    <string name="service_toast_logging_active">There is already an active trip</string>
    <string name="service_toast_logging_unable_to_start">Unable to start logging, please try again</string>
    <string name="service_toast_logging_unable_to_create_trip">Unable to create new trip.</string>

    <string name="service_toast_logging_delete_success">Successfully delete the trip.</string>
    <string name="service_toast_logging_delete_failed">An error occurred while delete the trip.</string>

    <string name="service_toast_logging_save_success">Successfully saved the trip.</string>
    <string name="service_toast_logging_save_failed">An error occurred while saving the trip.</string>

    <!-- Action bar menu -->
    <string name="action_settings">Settings</string>


</resources>
